envs/dev/platform/k8s/policies/network/_old_experiments/99-baseline-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-deny
  namespace: demo-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
